--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
-
+body {
+    background-color: #e3e3e3;
+}
 body, p, h1, h2{
     margin: 0;
    font-family: 'Roboto', sans-serif;
 }
+
 a {
     text-decoration: none;
 }
-
+a, button {
+    transition: 300ms;
+    cursor: pointer;
+}
 
 .black-header {
     display: flex;
@@ -24,12 +30,13 @@ a {
    }
 .black-header a:hover {
     color: white;
-    transition: 500ms;
-}
+    }
 .white-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: white;
+    padding: 10px;
 
 }
 .costumer-side {
@@ -38,5 +45,47 @@ a {
 }
 
 .white-header a {
-    margin: 0 12px;
+    color: #616161;
+    font-size: 17px;
+    padding: 14px;
+    margin: 0 10px;
+       
+}
+.costumer-side img {
+    width: 150px;
+}
+.white-header button {
+    background-color: #e0343c;
+    color: white;
+    padding: 12px 18px;
+    border-radius: 5px;
+   
+}
+.white-header a:hover {
+    color: #808080
+}
+
+.white-header button:hover {
+
+    background-color: #e65c62;
+}
+.hero   {
+    height: 70vh;
+    background-image: url(/photo-1480714378408-67cf0d13bc1b.avif);
+    background-size: cover;
+}
+
+.news   {
+    padding: 32px;
+    background-color: white;
+    margin: -24px 32px 0 32px;
+}
+.news h2 {
+    text-align: center;
+    font-weight: 300    ;
+    border-bottom: 2px solid yellow;
+
+    width: 120px;
+    margin: 0 auto;
+    padding-bottom: 16px;
 }
