--- a/style.css
+++ b/style.css
@@ -1,111 +1,146 @@
 body {
-    background-color: #e3e3e3;
+  background-color: #e3e3e3;
 }
-body, p, h1, h2{
-    margin: 0;
-   font-family: 'Roboto', sans-serif;
+body,
+p,
+h1,
+h2 {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-a, button {
-    transition: 300ms;
-    cursor: pointer;
+a,
+button {
+  transition: 300ms;
+  cursor: pointer;
 }
 
 .black-header {
-    display: flex;
-    justify-content: space-between;
-    background-color: black;
-    padding: 10px 16px;
-    
+  display: flex;
+  justify-content: space-between;
+  background-color: black;
+  padding: 10px 16px;
 }
 
 .black-header a {
-    color: #ddd9d9;
-    margin: 0 12px;
-    font-weight: 300;
-    font-size: 13px;
-   }
+  color: #ddd9d9;
+  margin: 0 12px;
+  font-weight: 300;
+  font-size: 13px;
+}
 .black-header a:hover {
-    color: white;
-    }
+  color: white;
+}
 .white-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
-    padding: 10px;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 10px;
 }
 .costumer-side {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .white-header a {
-    color: #616161;
-    font-size: 17px;
-    padding: 14px;
-    margin: 0 10px;
-       
+  color: #616161;
+  font-size: 17px;
+  padding: 14px;
+  margin: 0 10px;
 }
 .costumer-side img {
-    width: 150px;
+  width: 150px;
 }
 .white-header button {
-    background-color: #e0343c;
-    color: white;
-    padding: 12px 18px;
-    border-radius: 5px;
-   
+  background-color: #e0343c;
+  color: white;
+  padding: 12px 18px;
+  border-radius: 5px;
 }
 .white-header a:hover {
-    color: #808080
+  color: #808080;
 }
 
 .white-header button:hover {
-
-    background-color: #e65c62;
+  background-color: #e65c62;
 }
-.hero   {
-    height: 70vh;
-    background-image: url(/photo-1480714378408-67cf0d13bc1b.avif);
-    background-size: cover;
+.hero {
+  height: 70vh;
+  background-image: url(/photo-1480714378408-67cf0d13bc1b.avif);
+  background-size: cover;
 }
 
-.news   {
-    padding: 32px;
-    background-color: white;
-    margin: -24px 32px 0 32px;
+.news {
+  padding: 32px;
+  background-color: white;
+  margin: -24px 32px 0 32px;
 }
 .news h2 {
-    text-align: center;
-    font-weight: 300    ;
-    border-bottom: 2px solid yellow;
+  text-align: center;
+  font-weight: 300;
+  border-bottom: 2px solid yellow;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
 
-    width: 120px;
-    margin: 0 auto;
-    padding-bottom: 16px;
+  width: 120px;
+  margin: 0 auto;
+  padding-bottom: 16px;
 }
 .cards {
-    display: flex;
-    justify-content: space-between;
-
+  display: flex;
+  justify-content: space-between;
 }
 .card {
-    margin: 16px;
-    width: 48%;
-    border: 1px solid #e3e3e3;
-    border-radius: 5px;
-    padding-bottom: 16px;
+  margin: 16px;
+  width: 48%;
+  border: 1px solid #e3e3e3;
+  border-radius: 5px;
+  padding-bottom: 16px;
 }
 .card .card-image img {
-    width: 100%;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+  width: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
-.card .card-text, .card a {
-    padding: 16px;
+.card .card-text,
+.card a {
+  padding: 16px;
+}
+
+@media screen and (max-width: 768px) {
+  .black-header {
+    justify-content: center;
+  }
+  .black-header a {
+    font-size: 15px;
+  }
+  .black-header .info-side {
+    display: none;
+  }
+  .white-header {
+    flex-direction: column;
+  }
+  .white-header .costumer-side {
+    margin-bottom: 16px;
+  }
+  .white-header button {
+    padding: 16px 24px;
+    font-size: 18px;
+  }
+
+  .hero {
+    height: 35vh;
+  }
+
+  .cards {
+    flex-direction: column;
+  }
+  .card {
+    width: 100%;
+    margin: 8px 0;
+  }
 }
